[package]
name = "modelm"
version = "0.4.1"
authors = ["Joshua Miller <jsmiller@uchicago.edu>"]

[dependencies]
clap = "1.5.5"
ears = { git = "https://github.com/jhasse/ears", rev = "9fa9f95b09777e8e17422da9fedcb4e7fb19fc22"}
env_logger = "0.3"
libc = "0.1"
log = "0.3"
rand = "0.3"
regex = "0.1"
yaml-rust = "*"
quick-error = "*"
